--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
 <body>
     <h1>Speaker</h1>
     <label for="inputText"></label><input type="text" id="inputText" placeholder="请输入要朗读的文本">
-    <button onclick="speakText()">speak</button>
+    <button onclick="speakText()">Speak</button>
     <div id="output">Your text will be shown here</div>
 
     <script>
