--- a/home.html
+++ b/home.html
@@ -45,7 +45,8 @@
 </head>
 <body>
     <h1>Text Reader</h1>
-    <label for="inputText"></label><input type="text" id="inputText" placeholder="Enter Your Text Here">
+    <label for="inputText"></label><input type="text" id="inputText" placeholder="Enter Your Text Here" />
+    <label for="passwordInput"></label><input type="password" id="passwordInput" placeholder="Enter The Password" />
     <button onclick="checkAndSpeakText()">Read</button>
     <button id="repeatBtn" onclick="toggleRepeat()">Open Repeat</button>
     <div id="output">Your text will be shown here</div>
@@ -57,7 +58,7 @@
         let currentText = '';
 
         function checkAndSpeakText() {
-            const password = prompt('Enter Your Password Here');
+            const password = document.getElementById('passwordInput').value;
             const rightPassword = "Legendary x7 [X-Ray]";
 
             if (password === rightPassword) {
