--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
 
         function checkAndSpeakText() {
             const password = document.getElementById('passwordInput').value;
-            const rightPassword = "Legendary x7 [X-Ray]";
+            const rightPassword = "Legendary x7 [X-Ray] bruh";
 
             if (password === rightPassword) {
                 speakText();
@@ -89,7 +89,7 @@
                     }, 2000);
                 }
             } else {
-                alert('Error:Can\'t read your text');
+                alert('Error:Can\'t read your text.');
             }
         }
 
