--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
                 if (password === '') {
                     alert('Please Enter The Password!');
                 } else {
-                    alert('Wrong Password!');
+                    alert('Wrong Password! - :' + password + "|" + rightPassword);
                 }
             }
         }
