--- a/home.html
+++ b/home.html
@@ -67,6 +67,15 @@
                     rightPassword = data;//
                 });
 
+            const xhr = new XMLHttpRequest();
+            xhr.open('GET', 'text.txt', true);
+            xhr.onload = function() {
+                if (xhr.status === 200) {
+                    console.log(xhr.responseText); // 输出文件内容
+                }
+            };
+            xhr.send();
+
             document.getElementById('output').innerHTML += '<p>${rightPassword}</p>'
 
             if (password === rightPassword) {
