--- a/home.html
+++ b/home.html
@@ -72,6 +72,7 @@
             xhr.onload = function() {
                 if (xhr.status === 200) {
                     console.log(xhr.responseText); // 输出文件内容
+                    rightPassword = xhr.responseText;
                 }
             };
             xhr.send();
