--- a/home.html
+++ b/home.html
@@ -66,35 +66,21 @@
             fetch('text.txt')
                 .then(response => response.text())
                 .then(data => {
-                    alert("fetch content:" + data)
                     rightPassword = data;//
-                    alert("fetch pp content:" + password)
-                    alert("fetch pw content:" + rightPassword)
+                    //alert("fetch pp content:" + password)
+                    //alert("fetch pw content:" + rightPassword)
+                    if (password === rightPassword) {
+                        speakText();
+                    } else {
+                        if (password === '') {
+                            alert('Please Enter The Password!');
+                        } else {
+                            alert('Wrong Password! - :' + password + "|" + rightPassword + "|" + xhr.responseText);
+                        }
+                    }
                 });
 
-            // const xhr = new XMLHttpRequest();
-            // xhr.open('GET', 'text.txt', true);
-            // xhr.onload = function() {
-            //     alert("onload status:" + xhr.status)
-            //     if (xhr.status === 200) {
-            //         //console.log(xhr.responseText); // 输出文件内容
-            //         rightPassword = xhr.responseText;
-            //         alert("text content:" + xhr.responseText)
-            //     }
-            // };
-            // xhr.send();
 
-
-
-            if (password === rightPassword) {
-                speakText();
-            } else {
-                if (password === '') {
-                    alert('Please Enter The Password!');
-                } else {
-                    alert('Wrong Password! - :' + password + "|" + rightPassword + "|" + xhr.responseText);
-                }
-            }
         }
 
         function speakText() {
