--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
 
         function checkAndSpeakText() {
             const password = document.getElementById('passwordInput').value;
-            var rightPassword = '';
+            let rightPassword = '';
 
             document.getElementById('output').innerHTML += '<p>${rightPassword}</p>'
 
@@ -67,20 +67,18 @@
                 .then(response => response.text())
                 .then(data => {
                     rightPassword = data;//
-                    //alert("fetch pp content:" + password)
-                    //alert("fetch pw content:" + rightPassword)
+                    alert("fetch pp content:" + password)
+                    alert("fetch pw content:" + rightPassword)
                     if (password === rightPassword) {
                         speakText();
                     } else {
                         if (password === '') {
                             alert('Please Enter The Password!');
                         } else {
-                            alert('Wrong Password! - :' + password + "|" + rightPassword + "|" + xhr.responseText);
+                            alert('Wrong Password! - :' + password + "|" + rightPassword);
                         }
                     }
                 });
-
-
         }
 
         function speakText() {
