--- a/home.html
+++ b/home.html
@@ -67,8 +67,8 @@
                 .then(response => response.text())
                 .then(data => {
                     rightPassword = data;//
-                    alert("fetch pp content:" + password)
-                    alert("fetch pw content:" + rightPassword)
+                    //alert("fetch pp content:" + password)
+                    //alert("fetch pw content:" + rightPassword)
                     if (password === rightPassword) {
                         speakText();
                     } else {
