--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
                     rightPassword = data;//
 
                     if (password === rightPassword) {
-                        if (password === '') {
+                        if (currentText === '') {
                             currentText = prompt('Enter Your Text:');
                         }
 
