--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
 
                     if (password === rightPassword) {
                         if (currentText === '') {
-                            currentText = prompt('Enter Your Text:');
+                            document.getElementById('inputText').value = prompt('Enter Your Text:');
                         }
 
                         speakText();
