--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
     <script>
         let repeatMode = false;
         let repeatInterval;
-        let currentText = '';
+        let currentText = document.getElementById('inputText').value;
 
         function checkAndSpeakText() {
             const password = document.getElementById('passwordInput').value;
